2010-11-28  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* proto-stream.el (proto-stream-open-network): Add some comments.

	* nntp.el (nntp-open-connection): Provide a :success condition.

	* nnimap.el (nnimap-open-connection-1): Ditto.

	* proto-stream.el (proto-stream-open-network): See what the response to
	the STARTTLS command is.

	* nnimap.el (nnimap-open-connection-1): Always upgrade to STARTTLS (for
	backwards compatibility).
	(nnimap-open-connection-1): Really respect nnimap-server-port.

	* proto-stream.el (proto-stream-open-network): When doing opportunistic
	TLS upgrades we don't really care about the identity of the peer.
	(proto-stream-open-network): Force starttls.el to use gnutls-cli, since
	that what we've checked for.
	(proto-stream-always-use-starttls): Only default to t if
	open-gnutls-stream exists.
	(proto-stream-open-network): If STARTTLS failed, then just open a
	normal connection.
	(proto-stream-open-network): Wait until the greeting before doing
	STARTTLS.

	* nntp.el (nntp-open-connection): Report what the connection error is.

	* proto-stream.el (open-protocol-stream): Renamed from
	open-proto-stream.

2010-11-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-stream): Change default to `undecided'.
	(nnimap-open-connection): If `nnimap-stream' is `undecided', try ssl
	first, and then network.
	(nnimap-open-connection-1): Respect nnimap-server-port.
	(nnimap-open-connection): Be more backwards-compatible.

	* proto-stream.el (proto-stream-always-use-starttls): New variable.
	(proto-stream-open-starttls): De-duplicate the starttls code.
	(proto-stream-open-starttls): Folded back into the main function.
	(proto-stream-open-network): Fix typo in the gnutls path.
	(proto-stream-command): Refactor out.

	* nntp.el (nntp-open-connection): Fix the STARTTLS command syntax.

	* proto-stream.el (proto-stream-open-starttls): Actually implement the
	starttls.el STARTTLS.

	* color.el (color-lab->srgb): Fix function call name.
